Including jsp index file and JSP Controller

--- a/RockPaperScissorsWebApp/src/main/webapp/resources/css/style.css
+++ b/RockPaperScissorsWebApp/src/main/webapp/resources/css/style.css
@@ -15,7 +15,7 @@ section {
 }
 
 .jumbotron {
-	background: #1b222a url(../img/site_showcase_bg.jpg) no-repeat top center;
+	background: #1b222a url("${pageContext.request.contextPath}/resources/img/shutterstock_284660570.jpg") no-repeat top center;
 	background-size: cover;
 	color: #fff;
 	height: 598px;
