--- a/RockPaperScissorsWebApp/src/main/webapp/resources/css/style.css
+++ b/RockPaperScissorsWebApp/src/main/webapp/resources/css/style.css
@@ -51,6 +51,12 @@ img.demo2 {
 	border: 1px solid #ccc; 
 }
 
+img.demo2 {
+	width: 100%;
+	padding: 3px;
+	border: 1px solid #ccc; 
+}
+
 .about-image-developer {
 	text-align: center;
 }
@@ -67,6 +73,8 @@ img.demo2 {
 	font-style: italic;
 	text-align: center;	
 }
+
+
 
 section#feature {
 	background: #1caa98;
